--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ammad - Portfolio</title>
+    <title>Muhammad Ammad Ismail - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -459,7 +459,7 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="logo">Muhammad Ammad Ismail</div>
+        <div class="logo">Muhammad Ammad</div>
         <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -484,7 +484,7 @@
         <h2 class="section-title reveal">About Me</h2>
         <div class="about-content reveal">
             <div class="about-image">
-                Your Photo
+                MA
             </div>
             <div class="about-text">
                 <h3>Hello! I'm a passionate developer.</h3>
@@ -589,21 +589,17 @@
                 I'm always open to discussing new projects, creative ideas, or opportunities to be part of your vision. Feel free to reach out!
             </p>
             <div class="contact-links">
-                <a href="mailto:your.email@example.com" class="contact-link">
+                <a href="mailto:mammadismail.321@gmail.com" class="contact-link">
                     <span class="contact-icon">✉️</span>
                     Email Me
                 </a>
-                <a href="https://github.com/yourusername" target="_blank" class="contact-link">
+                <a href="https://github.com/MuhammadAmmadIsmail" target="_blank" class="contact-link">
                     <span class="contact-icon">💻</span>
                     GitHub
                 </a>
-                <a href="https://linkedin.com/in/yourusername" target="_blank" class="contact-link">
+                <a href="https://www.linkedin.com/in/muhammadammadismail/" target="_blank" class="contact-link">
                     <span class="contact-icon">💼</span>
                     LinkedIn
-                </a>
-                <a href="https://twitter.com/yourusername" target="_blank" class="contact-link">
-                    <span class="contact-icon">🐦</span>
-                    Twitter
                 </a>
             </div>
         </div>
@@ -611,7 +607,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Your Muhammad Ammad. All rights reserved.</p>
+        <p>&copy; 2024 Muhammad Ammad Ismail. All rights reserved.</p>
     </footer>
 
     <script>
