--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         :root {
             --primary: #0a0a0a;
-            --accent: #ff6b35;
-            --accent-light: #ff8c61;
+            --accent: #0f6b7b;
+            --accent-light: #387f9b;
             --background: #fafaf8;
             --text: #2d2d2d;
             --text-light: #666;
@@ -470,10 +470,10 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">Creative Developer & Designer</h1>
-            <p class="hero-subtitle">Building beautiful digital experiences</p>
+            <h1 class="hero-title">Deep Learning Engineer</h1>
+            <p class="hero-subtitle">Specializing in Computer Vision & AI Solutions</p>
             <p class="hero-description">
-                I craft elegant solutions to complex problems, combining clean code with thoughtful design to create memorable user experiences.
+                I am a passionate Deep Learning Engineer with a strong background in artificial intelligence and machine learning. I specialize in developing cutting-edge computer vision systems and predictive models that solve real-world problems.
             </p>
             <a href="#projects" class="cta-button">View My Work</a>
         </div>
@@ -487,21 +487,24 @@
                 MA
             </div>
             <div class="about-text">
-                <h3>Hello! I'm a passionate developer.</h3>
+                <h3>Deep Learning Engineer & AI Specialist</h3>
                 <p>
-                    With a keen eye for detail and a love for clean code, I specialize in creating web applications that are both beautiful and functional. My journey in development started with curiosity and has evolved into a professional pursuit of excellence.
+                    With expertise in computer vision, machine learning, and deep learning, I develop innovative AI solutions that address complex real-world challenges. My work spans from medical imaging applications to safety-critical systems, leveraging state-of-the-art neural network architectures.
                 </p>
                 <p>
-                    I believe in continuous learning and staying updated with the latest technologies. When I'm not coding, you can find me exploring new design trends, contributing to open-source projects, or sharing knowledge with the developer community.
+                    I'm passionate about pushing the boundaries of what's possible with AI, particularly in object detection, image analysis, and predictive modeling. My projects demonstrate a commitment to building robust, production-ready systems that deliver measurable impact.
                 </p>
                 
                 <div class="skills">
-                    <span class="skill-tag">JavaScript</span>
-                    <span class="skill-tag">React</span>
-                    <span class="skill-tag">Node.js</span>
+                    <span class="skill-tag">Deep Learning</span>
+                    <span class="skill-tag">Computer Vision</span>
                     <span class="skill-tag">Python</span>
-                    <span class="skill-tag">CSS/SASS</span>
-                    <span class="skill-tag">UI/UX Design</span>
+                    <span class="skill-tag">TensorFlow</span>
+                    <span class="skill-tag">PyTorch</span>
+                    <span class="skill-tag">YOLOv5/v7</span>
+                    <span class="skill-tag">XGBoost</span>
+                    <span class="skill-tag">Machine Learning</span>
+                    <span class="skill-tag">Data Science</span>
                 </div>
             </div>
         </div>
@@ -513,69 +516,77 @@
         <div class="projects-grid">
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- Replace with actual project image -->
+                    <!-- Dental Implant Detection -->
                 </div>
                 <div class="project-content">
-                    <h3 class="project-title">Project One</h3>
+                    <h3 class="project-title">Dental Implant Detection</h3>
                     <p class="project-description">
-                        A modern web application that helps users manage their daily tasks with an intuitive interface and powerful features.
+                        Advanced computer vision tool that identifies dental implant types in radiograph images using YOLOv7. Trained on ~2000 X-ray images with custom GUI for real-time detection and classification.
                     </p>
                     <div class="project-tags">
-                        <span class="tag">React</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">Material-UI</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-card reveal">
-                <div class="project-image">
-                    <!-- Replace with actual project image -->
-                </div>
-                <div class="project-content">
-                    <h3 class="project-title">Project Two</h3>
-                    <p class="project-description">
-                        An e-commerce platform with seamless checkout experience and real-time inventory management system.
-                    </p>
-                    <div class="project-tags">
-                        <span class="tag">Node.js</span>
-                        <span class="tag">Express</span>
-                        <span class="tag">MongoDB</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-card reveal">
-                <div class="project-image">
-                    <!-- Replace with actual project image -->
-                </div>
-                <div class="project-content">
-                    <h3 class="project-title">Project Three</h3>
-                    <p class="project-description">
-                        A data visualization dashboard that transforms complex datasets into beautiful, interactive charts and graphs.
-                    </p>
-                    <div class="project-tags">
-                        <span class="tag">D3.js</span>
-                        <span class="tag">Vue.js</span>
+                        <span class="tag">YOLOv7</span>
+                        <span class="tag">Computer Vision</span>
+                        <span class="tag">Medical Imaging</span>
                         <span class="tag">Python</span>
                     </div>
+                    <a href="https://github.com/MuhammadAmmadIsmail/Dental-_Implant_Detection" target="_blank" style="display: inline-block; margin-top: 1rem; color: var(--accent); text-decoration: none; font-weight: 600;">View on GitHub →</a>
                 </div>
             </div>
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- Replace with actual project image -->
+                    <!-- Fire Detection System -->
                 </div>
                 <div class="project-content">
-                    <h3 class="project-title">Project Four</h3>
+                    <h3 class="project-title">Fire Detection & Localization</h3>
                     <p class="project-description">
-                        A mobile-first progressive web app for fitness tracking with social features and achievement system.
+                        Real-time computer vision system for automated fire and smoke detection using fine-tuned YOLOv5 model. Features desktop application with live camera feed processing and alert system.
                     </p>
                     <div class="project-tags">
-                        <span class="tag">React Native</span>
-                        <span class="tag">GraphQL</span>
-                        <span class="tag">AWS</span>
+                        <span class="tag">YOLOv5</span>
+                        <span class="tag">Real-time Detection</span>
+                        <span class="tag">Safety Systems</span>
+                        <span class="tag">OpenCV</span>
                     </div>
+                    <a href="https://github.com/MuhammadAmmadIsmail/Fire-Detection-and-Localization-" target="_blank" style="display: inline-block; margin-top: 1rem; color: var(--accent); text-decoration: none; font-weight: 600;">View on GitHub →</a>
+                </div>
+            </div>
+
+            <div class="project-card reveal">
+                <div class="project-image">
+                    <!-- NFL Big Data Bowl -->
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">NFL Big Data Bowl 2026</h3>
+                    <p class="project-description">
+                        Machine learning model for NFL passing prediction task using XGBoost ensemble with time-based cross-validation. Includes feature engineering, kinematic analysis, and Kaggle competition deployment.
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">XGBoost</span>
+                        <span class="tag">Time-series</span>
+                        <span class="tag">Feature Engineering</span>
+                        <span class="tag">Kaggle</span>
+                    </div>
+                    <a href="https://github.com/3aLaee/machine-learning-project" target="_blank" style="display: inline-block; margin-top: 1rem; color: var(--accent); text-decoration: none; font-weight: 600;">View on GitHub →</a>
+                </div>
+            </div>
+
+            <div class="project-card reveal">
+                <div class="project-image">
+                    <!-- Geothermal Seismic -->
+                </div>
+                <div class="project-content">
+                    <h3 class="project-title">Geothermal Seismic Monitoring</h3>
+                    <p class="project-description">
+                        Data science project analyzing correlation between geothermal plant operations and seismic activity. Features interactive dashboards, ML models for magnitude prediction, and risk assessment system.
+                    </p>
+                    <div class="project-tags">
+                        <span class="tag">Random Forest</span>
+                        <span class="tag">Data Analytics</span>
+                        <span class="tag">React Dashboard</span>
+                        <span class="tag">Time-series</span>
+                    </div>
+                    <a href="https://github.com/kiflomhailu/project_datascience_secondYear" target="_blank" style="display: inline-block; margin-top: 1rem; color: var(--accent); text-decoration: none; font-weight: 600;">View on GitHub →</a>
                 </div>
             </div>
         </div>
