--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
         <div class="projects-grid">
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- Dental Implant Detection -->
+                    <img src="images/img1.png" alt="Dinosaur" />
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Dental Implant Detection</h3>
@@ -535,7 +535,8 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- Fire Detection System -->
+                    <img src="images/img1.png" alt="Dinosaur" />
+                </div>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Fire Detection & Localization</h3>
@@ -554,7 +555,8 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- NFL Big Data Bowl -->
+                    <img src="images/img1.png" alt="Dinosaur" />
+                </div>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">NFL Big Data Bowl 2026</h3>
@@ -573,7 +575,8 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <!-- Geothermal Seismic -->
+                    <img src="images/img1.png" alt="Dinosaur" />
+                </div>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Geothermal Seismic Monitoring</h3>
