--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <style>
         :root {
             --primary: #0a0a0a;
-            --accent: #0f6b7b;
-            --accent-light: #387f9b;
+            --accent: #ff6b35;
+            --accent-light: #ff8c61;
             --background: #fafaf8;
             --text: #2d2d2d;
             --text-light: #666;
@@ -210,6 +210,15 @@
             font-size: 4rem;
             color: white;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            position: relative;
+        }
+
+        .about-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
         }
 
         .about-text {
@@ -284,6 +293,20 @@
             overflow: hidden;
         }
 
+        .project-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+        }
+
+        /* Fallback icon if no image */
+        .project-image:empty::before {
+            content: '📸';
+            font-size: 4rem;
+            opacity: 0.3;
+        }
+
         .project-card:nth-child(2) .project-image {
             background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
         }
@@ -294,12 +317,6 @@
 
         .project-card:nth-child(4) .project-image {
             background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);
-        }
-
-        .project-image::before {
-            content: '📸';
-            font-size: 4rem;
-            opacity: 0.3;
         }
 
         .project-content {
@@ -484,7 +501,8 @@
         <h2 class="section-title reveal">About Me</h2>
         <div class="about-content reveal">
             <div class="about-image">
-                MA
+                <img src="images/profile-photo.jpg" alt="Muhammad Ammad Ismail" />
+                <!-- Or use initials as fallback: MA -->
             </div>
             <div class="about-text">
                 <h3>Deep Learning Engineer & AI Specialist</h3>
@@ -516,7 +534,8 @@
         <div class="projects-grid">
             <div class="project-card reveal">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Dinosaur" />
+                    <img src="images/img1.png" alt="Dental Implant Detection Project" />
+                    <!-- Or use: <img src="https://via.placeholder.com/400x250/667eea/ffffff?text=Dental+Implant" alt="Dental Implant Detection" /> -->
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Dental Implant Detection</h3>
@@ -535,8 +554,7 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Dinosaur" />
-                </div>
+                    <img src="images/img2.png" alt="Fire Detection and Localization Project" />
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Fire Detection & Localization</h3>
@@ -555,8 +573,7 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Dinosaur" />
-                </div>
+                    <img src="images/img3.png" alt="NFL Big Data Bowl 2026 Project" />
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">NFL Big Data Bowl 2026</h3>
@@ -575,8 +592,7 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Dinosaur" />
-                </div>
+                    <img src="images/img4.png" alt="Geothermal Seismic Monitoring Project" />
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Geothermal Seismic Monitoring</h3>
