--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 
             <div class="project-card reveal">
                 <div class="project-image">
-                    <img src="images/img3.png" alt="NFL Big Data Bowl 2026 Project" />
+                    <img src="images/img3.jpg" alt="NFL Big Data Bowl 2026 Project" />
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">NFL Big Data Bowl 2026</h3>
