--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
         <h2 class="section-title reveal">About Me</h2>
         <div class="about-content reveal">
             <div class="about-image">
-                <img src="images/profile-photo.jpg" alt="Muhammad Ammad Ismail" />
+                <img src="images/profile.jpeg" alt="Muhammad Ammad Ismail" />
                 <!-- Or use initials as fallback: MA -->
             </div>
             <div class="about-text">
